re-added filter and sort and all tht, fix load review, back to top button, changed main page and tried to make it pretty !